Done:heavy_check_mark:

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="profile">
-         <img src="images/playlist/pic-2.jpg" class="image" alt="">
+         <img src="images/playlist/pic2.jpg" class="image" alt="">
          <h3 class="name">Student's Name</h3>
          <p class="role">student</p>
          <a href="profile.html" class="btn">view profile</a>
@@ -55,7 +55,7 @@
    </div>
 
    <div class="profile">
-      <img src="images/playlist/pic-7.jpg" class="image" alt="">
+      <img src="images/playlist/pic7.jpg" class="image" alt="">
       <h3 class="name">Student's name</h3>
       <p class="role">student</p>
       <a href="profile.html" class="btn">view profile</a>
@@ -133,7 +133,7 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/platylist/pic-2.jpg" alt="">
+            <img src="images/platylist/pic2.jpg" alt="">
             <div class="info">
                <h3>Alfonso Picosso</h3>
                <span>11-09-2023</span>
@@ -149,7 +149,7 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/playlist/pic-3.jpg" alt="">
+            <img src="images/playlist/pic3.jpg" alt="">
             <div class="info">
                <h3>Alfonso Picosso</h3>
                <span>11-09-2023</span>
@@ -165,7 +165,7 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/playlist/pic-4.jpg" alt="">
+            <img src="images/playlist/pic4.jpg" alt="">
             <div class="info">
                <h3>Alfonso Picosso</h3>
                <span>11-09-2023</span>
@@ -181,7 +181,7 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/playlist/pic-5.jpg" alt="">
+            <img src="images/playlist/pic5.jpg" alt="">
             <div class="info">
                <h3>Alfonso Picosso</h3>
                <span>11-09-2023</span>
@@ -191,13 +191,13 @@
             <img src="images/playlist/thumb-4.jpeg" alt="">
             <span>10 videos</span>
          </div>
-         <h3 class="title">complete Boostrap tutorial</h3>
+         <h3 class="title">Complete French Language tutorial</h3>
          <a href="playlist.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
          <div class="tutor">
-            <img src="images/playlist/pic-6.jpg" alt="">
+            <img src="images/playlist/pic6.jpg" alt="">
             <div class="info">
                <h3>Alfonso Picosso</h3>
                <span>11-09-2023</span>
@@ -213,7 +213,7 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/playlist/pic-7.jpg" alt="">
+            <img src="images/playlist/pic7.jpg" alt="">
             <div class="info">
                <h3>Alfonso Picosso</h3>
                <span>11-09-2023</span>
@@ -223,7 +223,7 @@
             <img src="images/playlist/thumb-6.jpeg" alt="">
             <span>10 videos</span>
          </div>
-         <h3 class="title">complete SASS tutorial</h3>
+         <h3 class="title">complete HTML&CSS tutorial</h3>
          <a href="playlist.html" class="inline-btn">view playlist</a>
       </div>
 
