--- a/playlist.html
+++ b/playlist.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-1.jpg" class="image" alt="">
+         <img src="images/playlist/pic-1.jpg" class="image" alt="">
          <h3 class="name">Student's Name</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
@@ -55,7 +55,7 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-1.jpg" class="image" alt="">
+      <img src="images/playlist/pic-1.jpg" class="image" alt="">
       <h3 class="name">Student's Name</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">view profile</a>
@@ -83,13 +83,13 @@
          </form>
    
          <div class="thumb">
-            <img src="images/thumb-1.png" alt="">
+            <img src="images/playlist/thumb-1.png" alt="">
             <span>10 videos</span>
          </div>
       </div>
       <div class="column">
          <div class="tutor">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/playlist/pic-2.jpg" alt="">
             <div>
                <h3>john deo</h3>
                <span>21-10-2022</span>
@@ -114,37 +114,37 @@
 
       <a class="box" href="https://www.youtube.com/watch?v=MDLn5-zSQQI">
          <i class="fas fa-play"></i>
-         <img src="images/post-1-1.png" alt="">
+         <img src="images/playlist/post-1-1.png" alt="">
          <h3>complete HTML tutorial (part 01)</h3>
       </a>
 
       <a class="box" href="">
          <i class="fas fa-play"></i>
-         <img src="images/post-1-2.png" alt="">
+         <img src="images/playlist/post-1-2.png" alt="">
          <h3>complete HTML tutorial (part 02)</h3>
       </a>
 
       <a class="box" href="watch-video.html">
          <i class="fas fa-play"></i>
-         <img src="images/post-1-3.png" alt="">
+         <img src="images/playlist/post-1-3.png" alt="">
          <h3>complete HTML tutorial (part 03)</h3>
       </a>
 
       <a class="box" href="">
          <i class="fas fa-play"></i>
-         <img src="images/post-1-4.png" alt="">
+         <img src="images/playlist/post-1-4.png" alt="">
          <h3>complete HTML tutorial (part 04)</h3>
       </a>
 
       <a class="box" href="watch-video.html">
          <i class="fas fa-play"></i>
-         <img src="images/post-1-5.png" alt="">
+         <img src="images/playlist/post-1-5.png" alt="">
          <h3>complete HTML tutorial (part 05)</h3>
       </a>
 
       <a class="box" href="watch-video.html">
          <i class="fas fa-play"></i>
-         <img src="images/post-1-6.png" alt="">
+         <img src="images/playlist/post-1-6.png" alt="">
          <h3>complete HTML tutorial (part 06)</h3>
       </a>
 
