Done:heavy_check_mark:

--- a/playlist.html
+++ b/playlist.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="profile">
-         <img src="images/playlist/pic-1.jpg" class="image" alt="">
+         <img src="images/playlist/pic1.jpg" class="image" alt="">
          <h3 class="name">Student's Name</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
@@ -55,7 +55,7 @@
    </div>
 
    <div class="profile">
-      <img src="images/playlist/pic-1.jpg" class="image" alt="">
+      <img src="images/playlist/pic1.jpg" class="image" alt="">
       <h3 class="name">Student's Name</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">view profile</a>
@@ -89,9 +89,9 @@
       </div>
       <div class="column">
          <div class="tutor">
-            <img src="images/playlist/pic-2.jpg" alt="">
+            <img src="images/playlist/pic2.jpg" alt="">
             <div>
-               <h3>john deo</h3>
+               <h3>Henritha</h3>
                <span>21-10-2022</span>
             </div>
          </div>
@@ -124,7 +124,7 @@
          <h3>complete HTML tutorial (part 02)</h3>
       </a>
 
-      <a class="box" href="watch-video.html">
+      <a class="box" href="https://www.youtube.com/watch?v=MDLn5-zSQQI">
          <i class="fas fa-play"></i>
          <img src="images/playlist/post-1-3.png" alt="">
          <h3>complete HTML tutorial (part 03)</h3>
@@ -136,13 +136,13 @@
          <h3>complete HTML tutorial (part 04)</h3>
       </a>
 
-      <a class="box" href="watch-video.html">
+      <a class="box" href="https://www.youtube.com/watch?v=MDLn5-zSQQI">
          <i class="fas fa-play"></i>
          <img src="images/playlist/post-1-5.png" alt="">
          <h3>complete HTML tutorial (part 05)</h3>
       </a>
 
-      <a class="box" href="watch-video.html">
+      <a class="box" href="https://www.youtube.com/watch?v=MDLn5-zSQQI">
          <i class="fas fa-play"></i>
          <img src="images/playlist/post-1-6.png" alt="">
          <h3>complete HTML tutorial (part 06)</h3>
